--- a/css/schede.css
+++ b/css/schede.css
@@ -633,6 +633,9 @@ body:not(.smart) .schedaRitorno #scheda_titolo{
 #scheda_testo2.noScroll{
 	overflow-y:hidden !important;
 }
+.scheda_stampa{
+	width:calc(100%);
+}
 
 .android #scheda:not(.schForm) #scheda_testo *:not(h1):not(h2):not(.annullaBtn):not(.submitBtn):not(.stampaBtn):not(.noDefault),
 .android #scheda:not(.schForm) #scheda_testo2 *:not(h1):not(h2):not(.annullaBtn):not(.submitBtn):not(.stampaBtn):not(.noDefault){
