--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -128,7 +128,7 @@ body:not(.smart) #elenchi #impostazioniArchivi{
 }
 .smart #elenchi #impostazioniArchivi{
     margin-top: -2px;
-   	margin-right: 0px !important;
+   	margin-right: 5px !important;
 }
 body:not(.smart) #help_set,
 .smart #elenchi #help_set,
@@ -330,7 +330,8 @@ body:not(.smart) #elenchi_linguette{
 	display:none;
 }
 .smart #elenchi_testa{
-    width: fit-content;
+    /* width: fit-content; */
+	width: calc(100% - 17px)
 }
 .smart #elenchi.noTesta #elenchi_testa{
    display:none;
@@ -370,6 +371,7 @@ body:not(.smart) #elenchi_linguette{
 	float: left;
 }
 #elenchi_titolo_txt{
+	width: calc(100% - 17px);
 	height: 50px;
     line-height: 50px;
 	display:inline-block;
@@ -377,6 +379,7 @@ body:not(.smart) #elenchi_linguette{
     text-overflow: ellipsis;
     font-size: var(--font-23-1);
     color: rgba(0,0,0,0.6);
+	text-align: left;
 }
 #elenchi_icona{
 	vertical-align: middle;
@@ -384,17 +387,23 @@ body:not(.smart) #elenchi_linguette{
     opacity: 0.3;
 }
 #titolo_base{
+    text-align: left;
+	height: 44px;
+    padding-left: 15px;
+    display: block;
+    padding-right: 20px;
+}
+#titolo_base_txt{
+	display:inline-block;
+	vertical-align:middle;
+	width:calc(100% - 75px);
 	height: 44px;
     line-height: 42px;
-    text-align: left;
-    padding-left: 15px;
     overflow-x: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     font-size: var(--font-23-1);
     color: rgba(0,0,0,0.6);
-    display: block;
-    padding-right: 20px;
 }
 .smart.android #titolo_base{
     padding-right: 0px;
