--- a/css/android.css
+++ b/css/android.css
@@ -24,6 +24,11 @@
 	line-height:32px !important;
 	font-size: var(--font-17-6) !important;
 }
+.android .popup#login input[type='text'],
+.android .popup#login input[type='password']{
+	height:45px !important;
+	line-height:45px !important;
+}
 .android #CNF_titolo,
 .android #CNF_btns button{
 	font-size: var(--font-17-6) !important;
