--- a/css/popup_login.css
+++ b/css/popup_login.css
@@ -22,6 +22,11 @@
 
 
 body:not(.smart) #login.inizio{
+	background-image: url(../img/rachideRed.png);
+	background-position: right bottom;
+	background-repeat: no-repeat;
+}
+body:not(.smart) #login.inizio{
 	left:0 !important;
 	top:0 !important;
 	margin-top:0 !important;
@@ -29,9 +34,6 @@ body:not(.smart) #login.inizio{
 	width:100% !important;
 	height:100% !important;
 	border-radius:0 !important;
-	background-image: url(../img/rachideRed.png);
-	background-position: right bottom;
-	background-repeat: no-repeat;
 }
 body:not(.smart) #login.inizio #contLogin{
 	max-width:400px !important;
