--- a/sets/auricologia/stili.css
+++ b/sets/auricologia/stili.css
@@ -1073,6 +1073,10 @@ body.smart #elenchi #cambioMappaPunti{
 	background-color: rgba(0,0,0,0.2);
 	text-align: right;
 }
+#filtriSmart_ico.nas,
+#filtriSmart_cont.nas{
+	display:none !important;
+}
 .bodyStampa #filtriSmart_ico{
 	display:none !important;
 }
