--- a/css/popup_backups.css
+++ b/css/popup_backups.css
@@ -79,7 +79,8 @@
 	height:32px;
 	line-height:32px;
 	cursor:pointer;
-	width: calc(100% - 230px);
+	width: calc(50% - 33px);
+	max-width: 168px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
