--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -569,6 +569,9 @@ body.bodyModello #logoPartner,
     width: 100% !important;
 	z-index: 1200;
    	background: url(../img/loadingBlack.gif) no-repeat center 30px #000;
+	color: #FFF;
+	text-align: center !important;
+	padding-top: 90px !important;
 }
 .loading.trasp{
     background: rgba(255,255,255,0.6) !important;
