--- a/css/guida.css
+++ b/css/guida.css
@@ -1112,7 +1112,10 @@ body:not(.smart) .guida_set .fumetti_freccia:last-child{
 .body_reflessologia_plantare #btnGuida_reflessologia_plantare{
 	background-color: #0050a0;
 }
-
+.smart .img_noSM,
+body:not(.smart) .img_onlySM{
+	display:none;
+}
 @media (max-width: 820px){	
 	body:not(.smart) .guida_anatomia .fumetti_cont,
 	body:not(.smart) .guida_archivi .fumetti_cont,
