--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -464,6 +464,9 @@ body.bodyModello #logoPartner,
 	width:100%;
 	height:100%;
 }
+#loader *{
+	color:inherit;
+}
 #loader{
 	background:url(../img/loadingBlack.gif) no-repeat center center #000;
 	background-size:50px;
